# Maricut_Darius_Proiect_PI

./: CMakeLists.txt  main.cpp
src/: proiect1.cpp  proiect1.h
